<resources>
    <string name="app_name">MNNIT</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_starting">SplashScreen</string>
    <string name="actionbar_title">MNNIT</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_closed">Drawer closed</string>

    <string-array name="login_nav_array">
        <item>Home</item>
        <item>Profile</item>
        <item>Settings</item>
        <item>Contact Us</item>
    </string-array>
    <string-array name="not_login_nav_array">
        <item>Home</item>
        <item>Login</item>
        <item>Settings</item>
        <item>Contact Us</item>
    </string-array>
    <string name="grievance_category_prompt">Choose a category</string>
    <string-array name="grievance_categories">
        <item>Others</item>
        <item>Carpentry</item>
        <item>Electrician</item>
        <item>Plumber</item>
        <item>Computer Center</item>
    </string-array>
    <string name="title_activity_mnnit_maps">MNNIT Maps</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_time_table">Time Table</string>
    <string name="headerImageDescp">Header Image for Navigation Drawer</string>
    <string name="newsCardTextInfo">No new news feed</string>
    <string name="newsCardTextHeader">News Feed</string>
    <string name="noticeCardTextInfo">No new notice/announcement</string>
    <string name="noticeCardTextHeader">Notice/Announcement</string>
    <string name="plannerCardTextinfo">You have nothing planned</string>
    <string name="plannerCardTextHeader">Your next plan</string>
    <string name="loginCardTextInfo">Login to access all service</string>
    <string name="loginCardTextHeader">You are not logged in</string>
    <string name="title_activity_cms">E-Grievance</string>
    <string name="status_progress">Progress</string>
    <string name="title_activity_add_grievance">Enter Your Grievance</string>
    <string name="title_activity_emergency_home">Health Care</string>
    <string name="duty_chart_of_doctors_and_physiotherapists">Duty Chart of Doctors and Physiotherapists</string>
    <string name="title_activity_life_at_mnnithome">LifeAtMNNITHome</string>
    <string name="title_activity_dept__home">Departments</string>
    <string name="title_activity_engineering__home">Engineering</string>
    <string name="title_activity_science__home">Science</string>
    <string name="title_activity_management__home">Management</string>

    <string-array name="Departments">
        <item>Engineering</item>
        <item>Science</item>
        <item>Management</item>
        <item>All Faculty Profile</item>
    </string-array>


    <string-array name="EngineeringDept">
        <item>Applied Mechanics</item>
        <item>Biotechnology</item>
        <item>Chemical Engineering</item>
        <item>Civil Engineering</item>
        <item>Computer Science and Engineering</item>
        <item>Electrical Engineering</item>
        <item>Electronics and Comm. Engineering</item>
        <item>Mechanical Engineering</item>
    </string-array>

    <string-array name="ScienceDept">
        <item>Chemistry</item>
        <item>Maths</item>
        <item>Physics</item>
    </string-array>



</resources>
