<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/header_picture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/adminbld3" />

    <!--android:tint="#3f51b5"
    android:tintMode="multiply" -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            tools:context="teamdevops.mnnit.fragment.DashBoardFragment">

            <android.support.v7.widget.CardView
                android:id="@+id/loginCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/loginCardImage"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:padding="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_profile_color" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/loginCardTextHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-condensed"
                            android:paddingLeft="5dp"
                            android:text="@string/loginCardTextHeader"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/loginCardTextInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-condensed"
                            android:paddingLeft="5dp"
                            android:text="@string/loginCardTextInfo"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/plannerCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/plannerCardImage"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:padding="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_planner_color_1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/plannerCardTextHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-condensed"
                            android:paddingLeft="5dp"
                            android:text="@string/plannerCardTextHeader"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/plannerCardTextInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-condensed"
                            android:paddingLeft="5dp"
                            android:text="@string/plannerCardTextinfo"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/noticeCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/noticeCardImage"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_notice_color" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/noticeCardTextHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-condensed"
                            android:paddingLeft="5dp"
                            android:text="@string/noticeCardTextHeader"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/noticeCardTextInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-condensed"
                            android:paddingLeft="5dp"
                            android:text="@string/noticeCardTextInfo"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/newsfeedCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="5dp"
                app:cardElevation="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/newsfeedCardImage"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:padding="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_news_color" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/newsfeedCardTextHeader"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:fontFamily="sans-serif-condensed"
                            android:paddingLeft="5dp"
                            android:text="@string/newsCardTextHeader"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/newsfeedCardTextInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="sans-serif-condensed"
                            android:paddingLeft="5dp"
                            android:text="@string/newsCardTextInfo"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>